fix layout issue with sign-in form

--- a/app/assets/stylesheets/base/_forms.scss
+++ b/app/assets/stylesheets/base/_forms.scss
@@ -1,4 +1,5 @@
-form.admin-add { background-color: white; }
+
+
 fieldset {
   background-color: lighten($base-border-color, 10%);
   border: $base-border;
