--- a/app/assets/stylesheets/partials/_layout.scss
+++ b/app/assets/stylesheets/partials/_layout.scss
@@ -53,7 +53,15 @@ h1 {
         font-size: $base-font-size * 1.75; // 16 * 1.75 = 28px
       }
 
+// Forms
+form.signin {
+  @include span-columns(5);
+  @include shift(3);
+  margin-top: em(54);
+  margin-bottom: em(54);
+}
 
+form.admin-add { background-color: white; }
 
 
 .texture {
